# lincity-ng

./: .gitignore  CMakeLists.txt  README  conanfile.txt  config.h.in
.github/workflows/: ci.yml
src/TinyLandGen/: main.cpp  save.cpp
src/gui/: Button.cpp  Component.cpp  FontManager.cpp  FontManager.hpp  Paragraph.cpp  Rect2D.cpp
src/gui/PainterGL/: PainterGL.cpp  PainterGL.hpp  TextureGL.cpp  TextureGL.hpp  TextureManagerGL.cpp  TextureManagerGL.hpp
src/gui/PainterSDL/: PainterSDL.cpp  TextureManagerSDL.cpp  TextureSDL.cpp
src/lincity/: engine.cpp  fileutil.cpp  fileutil.h  lintypes.h  loadsave.h  simulate.cpp  simulate.h
src/lincity-ng/: ButtonPanel.cpp  ButtonPanel.hpp  Config.cpp  Config.hpp  Dialog.cpp  Dialog.hpp  EconomyGraph.cpp  EconomyGraph.hpp  Game.cpp  Game.hpp  GameView.cpp  MainLincity.cpp  MainLincity.hpp  MainMenu.cpp  MainMenu.hpp  MapEdit.cpp  MapEdit.hpp  MiniMap.cpp  MpsInterface.cpp  ScreenInterface.cpp  ScreenInterface.hpp  main.cpp  main.hpp
src/lincity/modules/: blacksmith.cpp  blacksmith.h  coal_power.cpp  coal_power.h  coalmine.cpp  coalmine.h  commune.cpp  commune.h  cricket.cpp  cricket.h  fire.cpp  fire.h  firestation.cpp  firestation.h  health_centre.cpp  health_centre.h  heavy_industry.cpp  heavy_industry.h  light_industry.cpp  light_industry.h  market.cpp  market.h  mill.cpp  mill.h  monument.cpp  monument.h  oremine.cpp  oremine.h  organic_farm.cpp  organic_farm.h  parkland.cpp  parkland.h  port.cpp  port.h  pottery.cpp  pottery.h  power_line.cpp  power_line.h  recycle.cpp  recycle.h  (+24 more)
src/tinygettext/: findlocale.cpp  tinygettext.cpp
